# smart_irrigation_system

./: .gitignore  CI-CD-SUMMARY.md  Makefile  README.md  SYSTEM_STATUS.md  dev.sh  docker-compose.yml  platformio.ini
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  dependency-updates.yml  deployment.yml  monitoring.yml  release.yml  testing.yml
Edge/: ESP-IDF_PROJECT_SUMMARY.md  ESP-IDF_Setup_Guide.md  EdgeCellular.h  EdgeEnhanced.ino  EdgeFirmware_Template.ino  EdgeLoRa.cpp  EdgeLoRa.h  SmartIrrigationFirmware_ORIGINAL_ARDUINO.ino  edge_board_def.h
Edge/esp-idf-projects/smart_irrigation_system/main/: CMakeLists.txt  Kconfig.projbuild  smart_irrigation_main.c
Edge/smart_irrigation_esp32/: CMakeLists.txt  sdkconfig
Node/: NODE-ANALYSIS.md
Node/LoRa/: LoRa.ino
Node/esp-idf-node/: CMakeLists.txt  PROJECT_SUMMARY.md  README.md  sdkconfig  sdkconfig.defaults
cloud-backend/: .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json  package.json  start-server.sh  start.sh  test-api-enhanced.js  test-api.js  test-server.js
cloud-backend/docs/: swagger.json
config/: mosquitto.conf  prometheus.yml
docs/: ESP32_QUICK_REFERENCE.md  ESP32_TOOLCHAIN_SETUP.md  MOBILE_APP_DEVELOPMENT_STRATEGY.md  MOBILE_APP_IMPLEMENTATION_PLAN.md  MOBILE_APP_TASK_CHECKLIST.md
examples/esp-idf-template/main/: CMakeLists.txt  app_config.h  board_config.h  main.c
mobile-app/: App.tsx  CLEANUP_SUMMARY.md  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
scripts/: setup_esp32_env.sh  setup_esp32_toolchain.sh
(+127 files in other folders)
